--- a/src/components/section-components/carousel/Carousel.css
+++ b/src/components/section-components/carousel/Carousel.css
@@ -1,60 +1,28 @@
-.swiper-container {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+.slide {
+  transform: scale(0.7);
+  transition: transform 300ms;
+  opacity: 0.5;
 }
 
-.swiper-slide {
-  width: 200px;
-  height: 200px;
-  margin-right: 20px;
+.slideWrapper {
+  display: flex;
+  justify-content: center;
 }
 
-.swiper-slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.swiper-button-prev,
-.swiper-button-next {
+.prevArrow {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 50%;
+  top: 40%;
+  left: 60px;
+  z-index: 100;
   cursor: pointer;
+  font-size: 2rem;
 }
 
-.swiper-button-prev {
-  left: 10px;
-}
-
-.swiper-button-next {
-  right: 10px;
-}
-
-.swiper-button-prev::before,
-.swiper-button-next::before {
-  content: '';
+.nextArrow {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 10px;
-  height: 10px;
-  border-left: 2px solid black;
-  border-bottom: 2px solid black;
-}
-
-.swiper-button-prev::before {
-  transform: translate(-50%, -50%) rotate(-135deg);
-}
-
-.swiper-button-next::before {
-  transform: translate(-50%, -50%) rotate(-135deg);
-
+  top: 40%;
+  right: 60px;
+  z-index: 100;
+  cursor: pointer;
+  font-size: 2rem;
 }
