--- a/public/assets/sass/sections/_main.scss
+++ b/public/assets/sass/sections/_main.scss
@@ -5256,6 +5256,10 @@ input.cart-plus-minus-box {
     .ltn__car-dealer-form-tab .tab-content {
         padding: 40px 25px;
     }
+    .ltn__car-dealer-form-box .ltn__car-dealer-form-item{
+        width: 100%!important;
+        display: block!important;
+    }
 
 }
 
