--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -60,6 +60,15 @@
     p {
         font-size: 14px;
     }
+    .ltn__car-dealer-form-item.col-lg-2.col-md-4 {
+        width: 48%;
+    }
+    .bedroom_class{
+        height: 70%;
+    }
+    .banner_search{
+
+    }
 
 }
 
@@ -90,6 +99,16 @@
     }
     p {
         font-size: 14px;
+    }
+    .ltn__car-dealer-form-box .ltn__car-dealer-form-item{
+        width: 100%!important;
+        display: block!important;
+    }
+    .ltn__car-dealer-form-box .nice-select{
+        height: 70%;
+    }
+    input[type="text"], input[type="email"], input[type="password"], input[type="submit"], textarea{
+        margin-bottom: 0px;
     }
 
 }
