home page footer

--- a/public/assets/sass/global/_global.scss
+++ b/public/assets/sass/global/_global.scss
@@ -251,6 +251,8 @@ font-family: 'Poppins', sans-serif;
     --section-bg-5: #FFF2F0; /* White */
     --section-bg-6: #0B2C3D; /* Black */
     --section-bg-7: #282b38; /* Black */
+    --section-bg-8: #FFFFF; /* Black */
+
 
 
     /* Border Colors */ 
@@ -681,7 +683,7 @@ ol li {
         height: 50%;
         left: 0;
         bottom: 0;
-        background-color: var(--section-bg-2);
+        background-color: var(--section-bg-1);
     }
 }
 .before-bg-bottom-2 {
