--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -84,6 +84,11 @@ body{
   margin-left: -15px;
   margin-right: -15px;
 }
+.img2{
+  border-radius: 50% !important;
+  max-width: 386px;
+  max-height: 155px;
+}
 
 .col,
 .col-1,
@@ -13368,6 +13373,7 @@ blockquote::before {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+  padding-top: 38px;
 }
 .ltn__team-item:hover {
   -webkit-box-shadow: var(--ltn__box-shadow-1);
