--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -76,6 +76,13 @@ body{
   overflow-x: hidden;
 
 }
+h1,h4,h2,h3,h5,h6{
+  font-weight: 650 !important;
+  font-size: 24px !important;
+}
+a{
+  font-size: 17px;
+}
 .container,
 .container-fluid {
   padding-right: 15px;
@@ -245,7 +252,7 @@ body{
   /* Darken */
   --ltn__secondary-color-3: #eb2027;
   /* Lighten */
-  --ltn__heading-color: #071c1f;
+  --ltn__heading-color: #1c1c1c;
   --ltn__paragraph-color: #5c727d;
   --ltn__heading-font: "League Spartan", sans-serif;
   --ltn__body-font: "League Spartan", sans-serif;
@@ -537,7 +544,7 @@ ol li {
 .section-bg-2,
 .section-bg-6,
 .section-bg-7 {
-  background-color: #36454F;
+  background-color: #1C1c1c;
 }
 .section-bg-2 h1,
 .section-bg-2 h2,
@@ -677,7 +684,7 @@ ol li {
 }
 
 .section-bg-7 {
-  background-color: #36454F;
+  background-color: #1C1C1C;
 }
 
 .text-color-white {
@@ -5101,6 +5108,7 @@ p{
 .ltn__header-area {
   z-index: 9999;
   position: relative;
+  background-color: #1C1C1C;
 }
 
 /* ----------------------------------------------
@@ -8053,7 +8061,7 @@ p{
 
 /* slide-item-7 */
 .ltn__slide-item-7 {
-  min-height: 800px;
+  min-height: 480px;
   height: calc(20vh - 0px);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -16860,7 +16868,7 @@ body {
   object-fit: cover;
   width: 100vw;
   min-width: 100%;
-  height: 100%;
+  height: 500px;
 }
 
 /* Video From Link (src="website.com/videoUrl") */
@@ -17771,7 +17779,7 @@ body {
   left: 0;
   top: 0;
   z-index: 9999999;
-  background-color: #071c1f;
+  background-color: #1c1c1c;
   width: 100%;
   height: 100%;
   display: -webkit-box;
