--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -98,6 +98,9 @@ a{
   max-width: 386px;
   max-height: 155px;
 }
+.btn{
+  border-radius: o.3rem;
+}
 
 .col,
 .col-1,
@@ -184,6 +187,10 @@ a{
   /* No padding for every columns */
   padding-right: 0;
   padding-left: 0;
+}
+label{
+  font-weight: 500!important;
+  color:#0F172A
 }
 
 @media (min-width: 992px) {
@@ -483,6 +490,12 @@ a {
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
+form{
+border-radius: 20px;
+}
+select{
+  border-radius: 5px;
+}
 
 a,
 a:hover,
@@ -491,6 +504,7 @@ a:active {
   text-decoration: none;
   outline: none;
   color: inherit;
+  font-weight: 500 !important;
 }
 
 a:hover {
@@ -503,6 +517,7 @@ optgroup,
 select,
 textarea {
   font-family: var(--ltn__body-font);
+  border-radius: 10px;
 }
 
 pre,
@@ -627,6 +642,9 @@ ol li {
 .section-bg-3 input[type="submit"] {
   border-color: var(--white);
   color: var(--white);
+}
+button{
+  border-radius: 0.3rem;
 }
 .section-bg-3 .btn-wrapper button {
   color: var(--white);
@@ -1037,7 +1055,7 @@ textarea {
   background-color: var(--white);
   border: 2px solid;
   border-color: var(--border-color-9);
-  height: 65px;
+  height: 45px;
   -webkit-box-shadow: none;
   box-shadow: none;
   padding-left: 20px;
@@ -1045,7 +1063,7 @@ textarea {
   color: var(--ltn__paragraph-color);
   width: 100%;
   margin-bottom: 30px;
-  border-radius: 0;
+  border-radius: 10px;
   padding-right: 40px;
 }
 
@@ -4470,6 +4488,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 .ltn__color-widget ul .orange {
   background-color: var(--orange);
 }
+
 
 /* ----------------------------------------------------
     Menu Widget
@@ -10034,6 +10053,7 @@ p{
   padding-top: 10px;
   padding-bottom: 10px;
   line-height: 1.8;
+  
 }
 
 .nice-select .list {
@@ -10161,6 +10181,7 @@ p{
   height: auto;
   visibility: visible;
   opacity: 1;
+  border-radius: 100px;
   overflow: visible;
 }
 
@@ -16516,6 +16537,7 @@ body {
   border-color: var(--ltn__secondary-color);
   background-color: var(--ltn__secondary-color);
   color: var(--white);
+  border-radius: 20px;
 }
 
 .ltn__history-icon {
@@ -16868,7 +16890,7 @@ body {
   object-fit: cover;
   width: 100vw;
   min-width: 100%;
-  height: 500px;
+  height: 100%;
 }
 
 /* Video From Link (src="website.com/videoUrl") */
