--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2645,6 +2645,9 @@ ul {
 .mt-170 {
   margin-top: 170px;
 }
+.mt-500 {
+  margin-top: 300px;
+}
 
 /* ----------------------------------------------------
     Margin Bottom
@@ -16890,7 +16893,7 @@ body {
   object-fit: cover;
   width: 100vw;
   min-width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 /* Video From Link (src="website.com/videoUrl") */
