--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -62,26 +62,17 @@ font-family: 'Rajdhani', sans-serif;
 font-family: 'Nunito Sans', sans-serif;
 font-family: 'Titillium Web', sans-serif;
 */
-/* @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap");
 /*
 font-family: 'Nunito Sans', sans-serif;
 font-family: 'Poppins', sans-serif;
-
 */
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
 /* ====================================================
     Gutter Code 
 ==================================================== */
 body{
   overflow-x: hidden;
 
-}
-h1,h4,h2,h3,h5,h6{
-  font-weight: 650 !important;
-  font-size: 24px !important;
-}
-a{
-  font-size: 17px;
 }
 .container,
 .container-fluid {
@@ -92,14 +83,6 @@ a{
 .row {
   margin-left: -15px;
   margin-right: -15px;
-}
-.img2{
-  border-radius: 50% !important;
-  max-width: 386px;
-  max-height: 155px;
-}
-.btn{
-  border-radius: o.3rem;
 }
 
 .col,
@@ -188,10 +171,6 @@ a{
   padding-right: 0;
   padding-left: 0;
 }
-label{
-  font-weight: 500!important;
-  color:#0F172A
-}
 
 @media (min-width: 992px) {
   /* Modify this based on column def */
@@ -254,15 +233,15 @@ label{
   /* Darken */
   --ltn__primary-color-3: #133236;
   /* Lighten */
-  --ltn__secondary-color: #eb2027;
-  --ltn__secondary-color-2: #eb2027;
+  --ltn__secondary-color: #ff5a3c;
+  --ltn__secondary-color-2: #cb3421;
   /* Darken */
-  --ltn__secondary-color-3: #eb2027;
+  --ltn__secondary-color-3: #fb412a;
   /* Lighten */
-  --ltn__heading-color: #1c1c1c;
+  --ltn__heading-color: #071c1f;
   --ltn__paragraph-color: #5c727d;
-  --ltn__heading-font: "League Spartan", sans-serif;
-  --ltn__body-font: "League Spartan", sans-serif;
+  --ltn__heading-font: "Montserrat", sans-serif;
+  --ltn__body-font: "Montserrat", sans-serif;
   /* Footer ACD2D8 8CB2B2  */
   --ltn__color-1: #8cb2b2;
   --ltn__color-2: #acd2d8;
@@ -314,9 +293,9 @@ label{
   /* Black */
   --border-color-3: #5c617f;
   /* Black */
-  --border-color-4: #eb2027;
+  --border-color-4: #eb6954;
   /* Red */
-  --border-color-5: #eb2027;
+  --border-color-5: #bc3928;
   /* Red */
   --border-color-6: #103034;
   /* Black */
@@ -357,9 +336,9 @@ label{
   --white-8: #fafafa;
   --white-9: #f2f7fa;
   --white-10: #ededed;
-  --red: #eb2027;
-  --red-2: #eb2027;
-  --red-3: #eb2027;
+  --red: #ff0000;
+  --red-2: #f34f3f;
+  --red-3: #db483b;
   --silver: #c0c0c0;
   --gray: #808080;
   --maroon: #800000;
@@ -382,14 +361,14 @@ label{
   --facebook: #365493;
   --twitter: #3cf;
   --linkedin: #0077b5;
-  --pinterest: #eb2027;
-  --dribbble: #eb2027;
+  --pinterest: #c8232c;
+  --dribbble: #ea4c89;
   --behance: #131418;
-  --google-plus: #eb2027;
-  --instagram: #eb2027;
+  --google-plus: #dd4b39;
+  --instagram: #e4405f;
   --vk: #3b5998;
   --wechat: #7bb32e;
-  --youtube: #eb2027;
+  --youtube: #cb2027;
   --email: #f89a1e;
 }
 
@@ -414,7 +393,7 @@ html {
 
 body {
   color: var(--ltn__paragraph-color);
-  font-weight: 300;
+  font-weight: 400;
   font-style: normal;
   font-size: 16px;
   font-family: var(--ltn__body-font);
@@ -468,7 +447,7 @@ h6,
   color: var(--ltn__heading-color);
   clear: both;
   font-family: var(--ltn__heading-font);
-  font-weight: 500;
+  font-weight: 700;
   line-height: 1.3;
   margin-bottom: 15px;
 }
@@ -490,12 +469,6 @@ a {
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-form{
-border-radius: 20px;
-}
-select{
-  border-radius: 5px;
-}
 
 a,
 a:hover,
@@ -504,7 +477,6 @@ a:active {
   text-decoration: none;
   outline: none;
   color: inherit;
-  font-weight: 500 !important;
 }
 
 a:hover {
@@ -517,7 +489,6 @@ optgroup,
 select,
 textarea {
   font-family: var(--ltn__body-font);
-  border-radius: 10px;
 }
 
 pre,
@@ -559,7 +530,7 @@ ol li {
 .section-bg-2,
 .section-bg-6,
 .section-bg-7 {
-  background-color: #1C1c1c;
+  background-color: var(--section-bg-2);
 }
 .section-bg-2 h1,
 .section-bg-2 h2,
@@ -643,9 +614,6 @@ ol li {
   border-color: var(--white);
   color: var(--white);
 }
-button{
-  border-radius: 0.3rem;
-}
 .section-bg-3 .btn-wrapper button {
   color: var(--white);
 }
@@ -702,7 +670,7 @@ button{
 }
 
 .section-bg-7 {
-  background-color: #1C1C1C;
+  background-color: var(--section-bg-7);
 }
 
 .text-color-white {
@@ -835,7 +803,7 @@ button{
   height: 50%;
   left: 0;
   bottom: 0;
-  background-color: var(--section-bg-8);
+  background-color: var(--section-bg-2);
 }
 
 .before-bg-bottom-2 {
@@ -1055,7 +1023,7 @@ textarea {
   background-color: var(--white);
   border: 2px solid;
   border-color: var(--border-color-9);
-  height: 45px;
+  height: 65px;
   -webkit-box-shadow: none;
   box-shadow: none;
   padding-left: 20px;
@@ -1063,7 +1031,7 @@ textarea {
   color: var(--ltn__paragraph-color);
   width: 100%;
   margin-bottom: 30px;
-  border-radius: 10px;
+  border-radius: 0;
   padding-right: 40px;
 }
 
@@ -2221,7 +2189,7 @@ ul {
 }
 
 .pt-120 {
-  padding-top: 40px;
+  padding-top: 120px;
 }
 
 .pt-122 {
@@ -2644,9 +2612,6 @@ ul {
 
 .mt-170 {
   margin-top: 170px;
-}
-.mt-500 {
-  margin-top: 300px;
 }
 
 /* ----------------------------------------------------
@@ -4492,7 +4457,6 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   background-color: var(--orange);
 }
 
-
 /* ----------------------------------------------------
     Menu Widget
 ---------------------------------------------------- */
@@ -4615,7 +4579,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   max-width: 80px;
 }
 p{
-  font-family: "League Spartan";
+  font-family: "Montserrat";
 }
 
 .popular-post-widget-brief {
@@ -5130,7 +5094,6 @@ p{
 .ltn__header-area {
   z-index: 9999;
   position: relative;
-  background-color: #1C1C1C;
 }
 
 /* ----------------------------------------------
@@ -8083,7 +8046,7 @@ p{
 
 /* slide-item-7 */
 .ltn__slide-item-7 {
-  min-height: 480px;
+  min-height: 800px;
   height: calc(20vh - 0px);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -8158,7 +8121,7 @@ p{
 }
 
 .ltn__slide-item-9 .ltn__tab-menu a {
-  padding: 12px 10px;
+  padding: 12px 20px;
 }
 
 .ltn__slide-item-9 .slide-item-info-line-no::before,
@@ -9169,7 +9132,7 @@ p{
 .ltn__product-item-4 .product-title {
   font-size: 22px;
   margin-bottom: 15px;
-  font-weight: 500;
+  font-weight: 600;
 }
 .ltn__product-item-4 .product-description p {
   font-size: 14px;
@@ -9245,7 +9208,7 @@ p{
 .real-estate-agent .agent-brief h6 {
   margin-bottom: 0;
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
 }
 .real-estate-agent .agent-brief small {
   font-size: 12px;
@@ -9523,12 +9486,12 @@ p{
 .ltn__gallery-filter-menu button,
 .ltn__tab-menu a {
   display: inline-block;
-  padding: 5px 40px;
-  
+  padding: 15px 40px;
+  margin-right: 5px;
   margin-bottom: 10px;
   color: var(--ltn__heading-color);
   background-color: var(--section-bg-1);
-  font-weight: 400;
+  font-weight: 700;
 }
 .ltn__gallery-filter-menu button:last-child,
 .ltn__tab-menu a:last-child {
@@ -9597,7 +9560,7 @@ p{
   border-bottom: 2px solid transparent;
   padding: 1px;
   margin-right: 50px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
   position: relative;
@@ -9809,7 +9772,6 @@ p{
   border: 1px solid #e5e5e5;
   padding: 50px 50px 30px;
   background-color: var(--section-bg-1);
-  font-family: 'League Spartan';
 }
 .ltn__shop-details-tab-content-inner .ltn__comment-reply-area form {
   padding: 0;
@@ -10056,7 +10018,6 @@ p{
   padding-top: 10px;
   padding-bottom: 10px;
   line-height: 1.8;
-  
 }
 
 .nice-select .list {
@@ -10165,11 +10126,9 @@ p{
 
 /* Bootstrap Tab with Slider Issue Fix Start */
 .tab-content {
-  width: 100%;
+  width: 100%s;
 }
-p{
-  font-size:17px;
-}
+
 .tab-content .tab-pane {
   display: block;
   height: 0;
@@ -10177,14 +10136,12 @@ p{
   visibility: hidden;
   overflow: hidden;
   opacity: 0;
-
 }
 
 .tab-content .tab-pane.active {
   height: auto;
   visibility: visible;
   opacity: 1;
-  border-radius: 100px;
   overflow: visible;
 }
 
@@ -10387,7 +10344,7 @@ p{
   content: "";
   height: 100%;
   width: 100%;
-  background-color: var(--ltn__primary-color);
+  background-color: transparent !important;
   pointer-events: none;
   opacity: 0;
   visibility: hidden;
@@ -10579,23 +10536,6 @@ p{
   display: inline-block;
   margin-right: 10px;
 }
-.carousel-container {
-  max-width: 100%;
-  overflow: hidden;
-}
-
-.carousel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.carousel img {
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-}
-
 .ltn__social-media-2 ul li a {
   background-color: var(--section-bg-1);
   color: var(--ltn__paragraph-color);
@@ -10758,7 +10698,7 @@ p{
 
 .section-title {
   font-size: 44px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.3;
 }
 .section-title span {
@@ -10853,17 +10793,9 @@ p{
   text-align: left !important;
 }
 
-.sticky-sidebarDEtails{
-  position: fixed;
-  top: 0;
-  width: 360px;
-  height: 100%;
-  z-index: 2;
-}
-
 /* Section Title 3 */
 .section-title-style-3 {
-  display: -webkit-box;         
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
@@ -10892,7 +10824,7 @@ p{
 }
 
 .section-subtitle {
-  font-weight: 500;
+  font-weight: 600;
   font-family: var(--ltn__body-font);
 }
 
@@ -11943,7 +11875,7 @@ p{
 .ltn__blog-title {
   margin-bottom: 20px;
   font-size: 22px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .ltn__blog-meta {
@@ -11954,7 +11886,7 @@ p{
   margin: 0;
 }
 .ltn__blog-meta li {
-  font-weight: 500;
+  font-weight: 600;
   display: inline-block;
   margin-right: 25px;
   position: relative;
@@ -12133,7 +12065,7 @@ p{
 .ltn__blog-item-3 .ltn__blog-btn,
 .ltn__blog-item-4 .ltn__blog-btn {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
   color: var(--ltn__secondary-color);
   text-transform: uppercase;
 }
@@ -13436,7 +13368,6 @@ blockquote::before {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
-  padding-top: 38px;
 }
 .ltn__team-item:hover {
   -webkit-box-shadow: var(--ltn__box-shadow-1);
@@ -14659,7 +14590,7 @@ input.cart-plus-minus-box {
   transform: rotate(45deg);
 }
 body {
-  font-family: 'League Spartan', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* ----------------------------------------------------
@@ -15089,7 +15020,7 @@ body {
   flex-flow: row wrap;
 }
 .ltn__list-item-half li {
-  width: 33%;
+  width: 50%;
   float: left;
   list-style: none;
   display: -webkit-box;
@@ -15952,9 +15883,8 @@ body {
 }
 
 .ltn__car-dealer-form-tab .tab-content {
-  padding: 20px;
+  padding: 40px;
   background-color: var(--section-bg-1);
-  border-radius: 10px;
 }
 
 .ltn__car-dealer-form-box .ltn__car-dealer-form-item {
@@ -16540,7 +16470,6 @@ body {
   border-color: var(--ltn__secondary-color);
   background-color: var(--ltn__secondary-color);
   color: var(--white);
-  border-radius: 20px;
 }
 
 .ltn__history-icon {
@@ -16893,7 +16822,7 @@ body {
   object-fit: cover;
   width: 100vw;
   min-width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 /* Video From Link (src="website.com/videoUrl") */
@@ -17139,7 +17068,7 @@ body {
   padding: 30px 45px 30px 30px;
   -webkit-box-shadow: var(--ltn__box-shadow-4);
   box-shadow: var(--ltn__box-shadow-4);
-  margin-top: 15px;
+  margin-top: 10px;
   margin-bottom: 50px;
   background-color: var(--white);
 }
@@ -17207,7 +17136,7 @@ body {
   font-weight: 400;
 }
 .ltn__search-by-place-item .search-by-place-info h4 {
-  font-weight: 500;
+  font-weight: 600;
 }
 .ltn__search-by-place-item .search-by-place-info .search-by-place-btn a {
   color: var(--ltn__secondary-color);
@@ -17473,8 +17402,8 @@ body {
     Footer Area
 -------------------------*/
 .footer-top-area {
-  padding-top: 47px;
-  padding-bottom: 0px;
+  padding-top: 92px;
+  padding-bottom: 20px;
 }
 
 .footer-widget {
@@ -17804,7 +17733,7 @@ body {
   left: 0;
   top: 0;
   z-index: 9999999;
-  background-color: #1c1c1c;
+  background-color: #071c1f;
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -17950,10 +17879,6 @@ body {
 .theme-btn-2 {
   background-color: var(--ltn__primary-color);
   color: var(--white);
-}
-.theme-btn-black {
-  background-color: var(--ltn__primary-color-3);
-  color: var(--black-2);
 }
 .theme-btn-2:hover {
   background-color: var(--ltn__secondary-color);
@@ -18169,130 +18094,6 @@ body {
   animation: sp-anime 0.8s infinite linear;
   border-top-color: var(--ltn__secondary-color);
 }
-.swiperContainer {
-  max-width: 124rem;
-  padding: 4rem 1rem;
-  margin: 0 auto;
-}
-
-.heading {
-  padding: 1rem 0;
-  font-size: 3.5rem;
-  text-align: center;
-}
-
-.swiper_container_4 {
-  height: 52rem;
-  padding: 2rem 0;
-  position: relative;
-}
-
-.swiper-slide {
-  width: 37rem;
-  height: 42rem;
-  position: relative;
-}
-
-@media (max-width: 500px) {
-  .swiper_container {
-    height: 47rem;
-  }
-  .swiper-slide {
-    width: 28rem !important;
-    height: 36rem !important;
-  }
-  .swiper-slide img {
-    width: 28rem !important;
-    height: 36rem !important;
-  }
-}
-
-.swiper-slide img {
-  width: 37rem;
-  height: 42rem;
-  border-radius: 2rem;
-  object-fit: cover;
-}
-
-.swiper-slide-shadow-left,
-.swiper-slide-shadow-right {
-  display: none;
-}
-
-.slider-controler {
-  position: relative;
-  bottom: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.slider-controler .swiper-button-next {
-  left: 58% !important;
-  transform: translateX(-58%) !important;
-}
-
-@media (max-width: 990px) {
-  .slider-controler .swiper-button-next {
-    left: 70% !important;
-    transform: translateX(-70%) !important;
-  }
-}
-
-@media (max-width: 450px) {
-  .slider-controler .swiper-button-next {
-    left: 80% !important;
-    transform: translateX(-80%) !important;
-  }
-}
-
-@media (max-width: 990px) {
-  .slider-controler .swiper-button-prev {
-    left: 30% !important;
-    transform: translateX(-30%) !important;
-  }
-}
-
-@media (max-width: 450px) {
-  .slider-controler .swiper-button-prev {
-    left: 20% !important;
-    transform: translateX(-20%) !important;
-  }
-}
-
-.slider-controler .slider-arrow {
-  background: var(--white);
-  width: 3.5rem;
-  height: 3.5rem;
-  border-radius: 50%;
-  left: 42%;
-  transform: translateX(-42%);
-  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
-}
-
-.slider-controler .slider-arrow ion-icon {
-  font-size: 2rem;
-  color: #222224;
-}
-
-.slider-controler .slider-arrow::after {
-  content: '';
-}
-
-.swiper-pagination {
-  position: relative;
-  width: 15rem !important;
-  bottom: 1rem;
-}
-
-.swiper-pagination .swiper-pagination-bullet {
-  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
-}
-
-.swiper-pagination .swiper-pagination-bullet-active {
-  background: var(--primary);
-}
-
 @keyframes sp-anime {
   100% {
     transform: rotate(360deg);
