--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -62,11 +62,13 @@ font-family: 'Rajdhani', sans-serif;
 font-family: 'Nunito Sans', sans-serif;
 font-family: 'Titillium Web', sans-serif;
 */
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap"); */
 /*
 font-family: 'Nunito Sans', sans-serif;
 font-family: 'Poppins', sans-serif;
+
 */
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
 /* ====================================================
     Gutter Code 
 ==================================================== */
@@ -83,6 +85,11 @@ body{
 .row {
   margin-left: -15px;
   margin-right: -15px;
+}
+.img2{
+  border-radius: 50% !important;
+  max-width: 386px;
+  max-height: 155px;
 }
 
 .col,
@@ -191,7 +198,10 @@ body{
     padding-left: 15px;
   }
 }
-
+h1,h4,h2,h3,h5,h6{
+  font-weight: 650 !important;
+  font-size: 24px !important;
+}
 @media (max-width: 991px) {
   /* Modify this based on column def */
   .ltn__custom-gutter {
@@ -233,15 +243,15 @@ body{
   /* Darken */
   --ltn__primary-color-3: #133236;
   /* Lighten */
-  --ltn__secondary-color: #ff5a3c;
-  --ltn__secondary-color-2: #cb3421;
+  --ltn__secondary-color: #eb2027;
+  --ltn__secondary-color-2: #eb2027;
   /* Darken */
-  --ltn__secondary-color-3: #fb412a;
+  --ltn__secondary-color-3: #eb2027;
   /* Lighten */
   --ltn__heading-color: #071c1f;
   --ltn__paragraph-color: #5c727d;
-  --ltn__heading-font: "Montserrat", sans-serif;
-  --ltn__body-font: "Montserrat", sans-serif;
+  --ltn__heading-font: "League Spartan", sans-serif;
+  --ltn__body-font: "League Spartan", sans-serif;
   /* Footer ACD2D8 8CB2B2  */
   --ltn__color-1: #8cb2b2;
   --ltn__color-2: #acd2d8;
@@ -293,9 +303,9 @@ body{
   /* Black */
   --border-color-3: #5c617f;
   /* Black */
-  --border-color-4: #eb6954;
+  --border-color-4: #eb2027;
   /* Red */
-  --border-color-5: #bc3928;
+  --border-color-5: #eb2027;
   /* Red */
   --border-color-6: #103034;
   /* Black */
@@ -336,9 +346,9 @@ body{
   --white-8: #fafafa;
   --white-9: #f2f7fa;
   --white-10: #ededed;
-  --red: #ff0000;
-  --red-2: #f34f3f;
-  --red-3: #db483b;
+  --red: #eb2027;
+  --red-2: #eb2027;
+  --red-3: #eb2027;
   --silver: #c0c0c0;
   --gray: #808080;
   --maroon: #800000;
@@ -361,14 +371,14 @@ body{
   --facebook: #365493;
   --twitter: #3cf;
   --linkedin: #0077b5;
-  --pinterest: #c8232c;
-  --dribbble: #ea4c89;
+  --pinterest: #eb2027;
+  --dribbble: #eb2027;
   --behance: #131418;
-  --google-plus: #dd4b39;
-  --instagram: #e4405f;
+  --google-plus: #eb2027;
+  --instagram: #eb2027;
   --vk: #3b5998;
   --wechat: #7bb32e;
-  --youtube: #cb2027;
+  --youtube: #eb2027;
   --email: #f89a1e;
 }
 
@@ -393,7 +403,7 @@ html {
 
 body {
   color: var(--ltn__paragraph-color);
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
   font-size: 16px;
   font-family: var(--ltn__body-font);
@@ -447,7 +457,7 @@ h6,
   color: var(--ltn__heading-color);
   clear: both;
   font-family: var(--ltn__heading-font);
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1.3;
   margin-bottom: 15px;
 }
@@ -510,6 +520,7 @@ a i {
 
 img {
   max-width: 100%;
+  border-radius: 22px;
 }
 
 ul li,
@@ -530,7 +541,7 @@ ol li {
 .section-bg-2,
 .section-bg-6,
 .section-bg-7 {
-  background-color: var(--section-bg-2);
+  background-color: #36454F;
 }
 .section-bg-2 h1,
 .section-bg-2 h2,
@@ -670,7 +681,7 @@ ol li {
 }
 
 .section-bg-7 {
-  background-color: var(--section-bg-7);
+  background-color: #36454F;
 }
 
 .text-color-white {
@@ -736,7 +747,7 @@ ol li {
 }
 
 .ltn__secondary-bg {
-  background-color: var(--ltn__secondary-color);
+  background-color: #000;
 }
 
 .ltn__secondary-bg-2 {
@@ -803,7 +814,7 @@ ol li {
   height: 50%;
   left: 0;
   bottom: 0;
-  background-color: var(--section-bg-2);
+  background-color: var(--section-bg-8);
 }
 
 .before-bg-bottom-2 {
@@ -1020,10 +1031,11 @@ input[type="email"],
 input[type="password"],
 input[type="submit"],
 textarea {
-  background-color: var(--white);
+  background-color: #F9FAFB;
   border: 2px solid;
-  border-color: var(--border-color-9);
-  height: 65px;
+  border-color: #fff;
+  height: 45px;
+  border-radius:8px;
   -webkit-box-shadow: none;
   box-shadow: none;
   padding-left: 20px;
@@ -1031,7 +1043,6 @@ textarea {
   color: var(--ltn__paragraph-color);
   width: 100%;
   margin-bottom: 30px;
-  border-radius: 0;
   padding-right: 40px;
 }
 
@@ -1041,7 +1052,7 @@ input[type="password"]::-webkit-input-placeholder,
 input[type="submit"]::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
-  color: var(--ltn__paragraph-color);
+  color: #94A3B8;
   font-size: 14px;
 }
 
@@ -2189,7 +2200,7 @@ ul {
 }
 
 .pt-120 {
-  padding-top: 120px;
+  padding-top: 40px;
 }
 
 .pt-122 {
@@ -4579,7 +4590,16 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   max-width: 80px;
 }
 p{
-  font-family: "Montserrat";
+  font-family: "League Spartan";
+  font-size:17px;
+}
+a{
+  font-family: "League Spartan";
+  font-size:17px;
+}
+label{
+  font-family: "League Spartan";
+  font-size:17px;
 }
 
 .popular-post-widget-brief {
@@ -9132,7 +9152,7 @@ p{
 .ltn__product-item-4 .product-title {
   font-size: 22px;
   margin-bottom: 15px;
-  font-weight: 600;
+  font-weight: 500;
 }
 .ltn__product-item-4 .product-description p {
   font-size: 14px;
@@ -9208,7 +9228,7 @@ p{
 .real-estate-agent .agent-brief h6 {
   margin-bottom: 0;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 500;
 }
 .real-estate-agent .agent-brief small {
   font-size: 12px;
@@ -9477,6 +9497,11 @@ p{
 ---------------------------------------------------- */
 .ltn__tab-menu {
   margin-bottom: 50px;
+
+}
+label{
+  color:#0F172A !important;
+  font-weight: 500 !important;
 }
 
 .ltn__tab-menu .nav {
@@ -9487,11 +9512,11 @@ p{
 .ltn__tab-menu a {
   display: inline-block;
   padding: 15px 40px;
-  margin-right: 5px;
+  
   margin-bottom: 10px;
   color: var(--ltn__heading-color);
-  background-color: var(--section-bg-1);
-  font-weight: 700;
+  background-color:white;
+  font-weight: 400;
 }
 .ltn__gallery-filter-menu button:last-child,
 .ltn__tab-menu a:last-child {
@@ -9560,7 +9585,7 @@ p{
   border-bottom: 2px solid transparent;
   padding: 1px;
   margin-right: 50px;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   position: relative;
@@ -10344,7 +10369,7 @@ p{
   content: "";
   height: 100%;
   width: 100%;
-  background-color: transparent !important;
+  background-color: var(--ltn__primary-color);
   pointer-events: none;
   opacity: 0;
   visibility: hidden;
@@ -10536,6 +10561,23 @@ p{
   display: inline-block;
   margin-right: 10px;
 }
+.carousel-container {
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.carousel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+}
+
 .ltn__social-media-2 ul li a {
   background-color: var(--section-bg-1);
   color: var(--ltn__paragraph-color);
@@ -10698,7 +10740,7 @@ p{
 
 .section-title {
   font-size: 44px;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.3;
 }
 .section-title span {
@@ -10793,9 +10835,17 @@ p{
   text-align: left !important;
 }
 
+.sticky-sidebarDEtails{
+  position: fixed;
+  top: 0;
+  width: 360px;
+  height: 100%;
+  z-index: 2;
+}
+
 /* Section Title 3 */
 .section-title-style-3 {
-  display: -webkit-box;
+  display: -webkit-box;         
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
@@ -10824,7 +10874,7 @@ p{
 }
 
 .section-subtitle {
-  font-weight: 600;
+  font-weight: 500;
   font-family: var(--ltn__body-font);
 }
 
@@ -11875,7 +11925,7 @@ p{
 .ltn__blog-title {
   margin-bottom: 20px;
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .ltn__blog-meta {
@@ -11886,7 +11936,7 @@ p{
   margin: 0;
 }
 .ltn__blog-meta li {
-  font-weight: 600;
+  font-weight: 500;
   display: inline-block;
   margin-right: 25px;
   position: relative;
@@ -12065,7 +12115,7 @@ p{
 .ltn__blog-item-3 .ltn__blog-btn,
 .ltn__blog-item-4 .ltn__blog-btn {
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 500;
   color: var(--ltn__secondary-color);
   text-transform: uppercase;
 }
@@ -13368,6 +13418,7 @@ blockquote::before {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+  padding-top: 38px;
 }
 .ltn__team-item:hover {
   -webkit-box-shadow: var(--ltn__box-shadow-1);
@@ -14738,6 +14789,7 @@ body {
 }
 .about-us-img-wrap img {
   margin: 0;
+  border-radius: 22px;
 }
 
 .about-us-img-info {
@@ -15020,7 +15072,7 @@ body {
   flex-flow: row wrap;
 }
 .ltn__list-item-half li {
-  width: 50%;
+  width: 33%;
   float: left;
   list-style: none;
   display: -webkit-box;
@@ -15873,18 +15925,26 @@ body {
 /* ----------------------------------------------------
     Car Dealer Form
 ---------------------------------------------------- */
+
 .ltn__car-dealer-form-tab .ltn__tab-menu {
   margin-bottom: 0;
+  background-color: white;
 }
 .ltn__car-dealer-form-tab .ltn__tab-menu .active {
   border-color: var(--ltn__secondary-color);
   background-color: var(--ltn__secondary-color);
   color: var(--white);
+  border-radius: 10px;
 }
 
 .ltn__car-dealer-form-tab .tab-content {
-  padding: 40px;
-  background-color: var(--section-bg-1);
+  padding: 10px 50px;
+  background-color:white;
+  border-radius: 10px;
+}
+.ltn__car-dealer-form-item{
+  border-radius: 20px;
+
 }
 
 .ltn__car-dealer-form-box .ltn__car-dealer-form-item {
@@ -15893,6 +15953,8 @@ body {
   margin-bottom: 30px;
   padding: 0;
   margin: 5px;
+  border-radius: 8px;
+
   width: 15.5%;
 
 }
@@ -15902,11 +15964,10 @@ body {
 }
 .ltn__car-dealer-form-box .nice-select {
   margin: 0;
-  height: 52%;
-  line-height: 58px;
+ 
   padding-right: 40px;
   padding-left: 20px;
-  border-radius: 0;
+  border-radius: 8px;
   min-width: 95%;
   font-size: 13px;
   font-weight: 400;
@@ -17068,7 +17129,7 @@ body {
   padding: 30px 45px 30px 30px;
   -webkit-box-shadow: var(--ltn__box-shadow-4);
   box-shadow: var(--ltn__box-shadow-4);
-  margin-top: 10px;
+  margin-top: 15px;
   margin-bottom: 50px;
   background-color: var(--white);
 }
@@ -17136,7 +17197,7 @@ body {
   font-weight: 400;
 }
 .ltn__search-by-place-item .search-by-place-info h4 {
-  font-weight: 600;
+  font-weight: 500;
 }
 .ltn__search-by-place-item .search-by-place-info .search-by-place-btn a {
   color: var(--ltn__secondary-color);
@@ -17402,8 +17463,8 @@ body {
     Footer Area
 -------------------------*/
 .footer-top-area {
-  padding-top: 92px;
-  padding-bottom: 20px;
+  padding-top: 47px;
+  padding-bottom: 0px;
 }
 
 .footer-widget {
@@ -17847,13 +17908,14 @@ body {
   margin-top: 30px;
 }
 
+
 .btn {
-  border-radius: 0;
+  border-radius: 10px;
   display: inline-block;
   font-size: 16px;
   font-weight: 400;
   font-family: var(--ltn__heading-font);
-  padding: 17px 40px;
+  padding: 10px 30px;
   text-align: center;
   cursor: pointer;
   -webkit-transition: all 0.3s ease 0s;
@@ -17871,6 +17933,14 @@ body {
   background-color: var(--ltn__secondary-color);
   color: var(--white);
 }
+.theme-btn-search {
+  background-color: var(--ltn__secondary-color);
+  color: var(--white);
+}
+.theme-btn-search:hover{
+  background-color: var(--ltn__secondary-color);
+  color: var(--white);
+}
 .theme-btn-1:hover {
   background-color: var(--ltn__primary-color);
   color: var(--white);
@@ -17879,6 +17949,10 @@ body {
 .theme-btn-2 {
   background-color: var(--ltn__primary-color);
   color: var(--white);
+}
+.theme-btn-black {
+  background-color: var(--ltn__primary-color-3);
+  color: var(--black-2);
 }
 .theme-btn-2:hover {
   background-color: var(--ltn__secondary-color);
@@ -18094,6 +18168,130 @@ body {
   animation: sp-anime 0.8s infinite linear;
   border-top-color: var(--ltn__secondary-color);
 }
+.swiperContainer {
+  max-width: 124rem;
+  padding: 4rem 1rem;
+  margin: 0 auto;
+}
+
+.heading {
+  padding: 1rem 0;
+  font-size: 3.5rem;
+  text-align: center;
+}
+
+.swiper_container_4 {
+  height: 52rem;
+  padding: 2rem 0;
+  position: relative;
+}
+
+.swiper-slide {
+  width: 37rem;
+  height: 42rem;
+  position: relative;
+}
+
+@media (max-width: 500px) {
+  .swiper_container {
+    height: 47rem;
+  }
+  .swiper-slide {
+    width: 28rem !important;
+    height: 36rem !important;
+  }
+  .swiper-slide img {
+    width: 28rem !important;
+    height: 36rem !important;
+  }
+}
+
+.swiper-slide img {
+  width: 37rem;
+  height: 42rem;
+  border-radius: 2rem;
+  object-fit: cover;
+}
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.slider-controler {
+  position: relative;
+  bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider-controler .swiper-button-next {
+  left: 58% !important;
+  transform: translateX(-58%) !important;
+}
+
+@media (max-width: 990px) {
+  .slider-controler .swiper-button-next {
+    left: 70% !important;
+    transform: translateX(-70%) !important;
+  }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-next {
+    left: 80% !important;
+    transform: translateX(-80%) !important;
+  }
+}
+
+@media (max-width: 990px) {
+  .slider-controler .swiper-button-prev {
+    left: 30% !important;
+    transform: translateX(-30%) !important;
+  }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-prev {
+    left: 20% !important;
+    transform: translateX(-20%) !important;
+  }
+}
+
+.slider-controler .slider-arrow {
+  background: var(--white);
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  left: 42%;
+  transform: translateX(-42%);
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.slider-controler .slider-arrow ion-icon {
+  font-size: 2rem;
+  color: #222224;
+}
+
+.slider-controler .slider-arrow::after {
+  content: '';
+}
+
+.swiper-pagination {
+  position: relative;
+  width: 15rem !important;
+  bottom: 1rem;
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: var(--primary);
+}
+
 @keyframes sp-anime {
   100% {
     transform: rotate(360deg);
