--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -541,7 +541,7 @@ ol li {
 .section-bg-2,
 .section-bg-6,
 .section-bg-7 {
-  background-color: #36454F;
+  background-color: #1c1c1c;
 }
 .section-bg-2 h1,
 .section-bg-2 h2,
@@ -681,7 +681,7 @@ ol li {
 }
 
 .section-bg-7 {
-  background-color: #36454F;
+  background-color: #1c1c1c;
 }
 
 .text-color-white {
@@ -6569,7 +6569,7 @@ label{
 
 /* Sticky Background Black */
 .sticky-active.ltn__sticky-bg-black {
-  background-color: var(--ltn__heading-color);
+  background-color: #1c1c1c;
 }
 .sticky-active.ltn__sticky-bg-black .ltn__main-menu > ul > li > a,
 .sticky-active.ltn__sticky-bg-black .header-wishlist a,
@@ -16881,7 +16881,7 @@ body {
   left: 0;
   -o-object-fit: cover;
   object-fit: cover;
-  width: 100vw;
+  width: 100%;
   min-width: 100%;
   height: 100%;
 }
@@ -18282,6 +18282,9 @@ body {
   position: relative;
   width: 15rem !important;
   bottom: 1rem;
+}
+.categoryTitle{
+  font-size: 24px !important;
 }
 
 .swiper-pagination .swiper-pagination-bullet {
